force-app/main/default/objects/Lead/fields/Need_extra_services__c.field-meta.xml
<CustomField>
    <fullName>Need_extra_services__c</fullName>
    <label>Need extra services?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>