force-app/main/default/objects/Lead/fields/Occasion__c.field-meta.xml
<CustomField>
    <fullName>Occasion__c</fullName>
    <label>Occasion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>