force-app/main/default/objects/Lead/fields/Personal_or_Corporate_Event__c.field-meta.xml
<CustomField>
    <fullName>Personal_or_Corporate_Event__c</fullName>
    <label>Personal or Corporate Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Event</fullName>
            </value>
            <value>
                <fullName>Personal Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>