force-app/main/default/objects/Lead/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <label>Special Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>