force-app/main/default/objects/Lead/fields/Uniform_Required__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Required__c</fullName>
    <label>Uniform Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>